ui glitch fix with kubota lights in taskbar

--- a/docs/manual/uw_manual_se.tex
+++ b/docs/manual/uw_manual_se.tex
@@ -222,22 +222,52 @@ Maskininställningarna justerar inställningarna för den valda maskinen. Välj 
 \fig{img/settings_uw180s}{Maskininställningar}{settings_implement}
 
 \begin{tabular}{ L{0.2\textwidth} L{0.66\textwidth} }
+\textbf{General} & UW180s Allmänna inställningar. \\
 \textbf{Log Measurement} & Inställningar för mätning av stockar och mätningsinstrumentets kalibreringsinställningar. \\
 \textbf{Valve Configurations} & UW180s Ventilinställningar 
 \end{tabular}
 
 \FloatBarrier
-\subsection{UW180s mätinstrumentets inställningar}\label{ch:settings_uw180s_meas}
+\subsection{UW180s Allmänna inställningar}\label{ch:settings_uw180s_meas}
 
-\fig{img/settings_uw180s_meas}{UW180s mätinstrumentets inställningar}{settings_uw180s_meas}
+\fig{img/settings_uw180s_general}{UW180s Allmänna inställningar}{settings_uw180s_general}
 
 \begin{tabular}{ L{0.2\textwidth} L{0.66\textwidth} }
-\textbf{Back} & Återgå till inställningarna för UW180s.  \\
-\textbf{Log length 1} & Första stockens längd i millimeter. \\
-\textbf{Log length 2} & Andra stockens längd i millimeter. \\
-\textbf{Length Calibration} & Kalibreringsvärde för längdmått. Desto större värde du ställer in, desto kortare stockar gör maskinen.  \\
-\textbf{Volume Calibration} & Volymkalkyleringens korrektionsfaktor. \\
+\textbf{Back} & Återgå till skärmen för UW180s Inställningar. \\
+\textbf{Rollers grab time} & Definierar presskraften som UW180s använder för att pressa trädet med matarvalsarna när den kvistar trädet. Desto större värdet är, desto hårdare pressas trädet. \\
+\textbf{Blades grab time} & Definierar presskraften som UW180s använder för att pressa trädet med knivar när den kvistar trädet. Desto större värdet är, desto hårdare pressas trädet.  \\
+\textbf{Tilt float enable} & Om UW180s har en flytventil för tilt-funktion, kan du med denna knapp ställa tilt-funktionen i flytläge efter att trädet har fällts med sågen.  Du kan stänga av tilt-funktionens flytläge genom att börja använda tilt-funktionen manuellt.  \\
+\textbf{Tilt on left thumb} & Om denna knapp är vald styrs tilt-funktionen med tummens vippströmbrytare i vänstra styrhandtaget.  Om knappen inte är vald, styrs tilt-funktionen med det vänstra tangentbordets tangenter.  \\
 \end{tabular}
+
+\FloatBarrier
+\subsection{Inställningar för UW180s mätenhet}\label{ch:settings_uw180s_meas}
+
+\fig{img/settings_uw180s_meas}{Inställningar för UW180s mätenhet}{settings_uw180s_meas}
+
+\begin{tabular}{ L{0.2\textwidth} L{0.66\textwidth} }
+\textbf{Back} & Återgå till skärmen för UW180s Inställningar \\
+\textbf{Log length 1} & Den först valda stockens mållängd i millimeter. \\
+\textbf{Log length 2} & Andra stockens mållängd i millimeter. \\
+\textbf{Length Calibration} & Kalibrerar längdmätningsenheten Värdet definierar hur långa längdvärden mätenheten räknar åt pulserna som ges av mätsensorn. Desto större värdet är, desto kortare blir stocken. \\
+\textbf{Width Calibration} & Öppna kalibreringsskärmen för tjocklek och volym. \\
+\textbf{Reset Volume} & Nollställer den beräknade volymen. \\
+\end{tabular}
+
+\FloatBarrier
+\subsection{UW180s diameter inställningar}\label{ch:settings_uw180s_width}
+
+\fig{img/settings_uw180s_meas_width}{UW180s diameter inställningar}{settings_uw180s_width}
+
+\begin{tabular}{ L{0.2\textwidth} L{0.66\textwidth} }
+\textbf{Back} & Återgå till skärmen för UW180s Inställningar. \\
+\textbf{Calibrate MIN angles} & Kalibrerar det stängda läget av valsarna i skördaraggregatet UW180s.  Valsarna bör vara helt stängda när denna knapp används. \\
+\textbf{Calibrate MAX angles} & Kalibrerar det öppna läget av valsarna i skördaraggregatet UW180s. Valsarna bör vara helt öppna när denna knapp används. \\
+\textbf{Min diam} & Ställer in trädets diameter i millimeter när valsarna är helt stängda. \\
+\textbf{Max diam} & Ställer in trädets diameter i millimeter när valsarna är helt öppna. \\
+\end{tabular}
+
+
 
 \FloatBarrier
 \subsection{Ventilinställningar för UW180s}\label{ch:settings_uw180s_valves}
